lesson 16 interacting with APIs
